# qm-numeric-particle

./: .gitmodules  Cargo.toml  LICENSE_MIT  wasm  web
src/: geometry.rs  lib.rs  shaders.rs
src/geometry/: algebra.rs  dynamic_linear_object.rs  linear_object.rs  static_linear_object.rs
src/shaders/: vertex_shader.glsl
tests/: geometry.rs  web.rs
