[package]
name = "qm-numeric-particle"
version = "0.1.0"
authors = ["Milan Gallo <gallo.milan.jr@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
num = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "WebGlBuffer",
    "WebGlRenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
